--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,7 +38,7 @@ body,
 input,
 textarea,
 button {
-  font-size: 400 15px 'Inter', sans-serif;
+  font: 400 15px 'Inter', sans-serif;
 }
 
 button {
