--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@
   --background: #f2f3f5;
   --gray-line: #dcdde0;
   --text: #666666;
-  --title: #2e38d4;
+  --title: #2e384d;
   --red: #e83f5b;
   --green: #4cd62b;
   --blue: #5965e0;
@@ -48,44 +48,4 @@ button {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-.container {
-  height: 100vh;
-  max-width: 992px;
-  margin: 0 auto;
-  padding: 2.5rem 2rem;
-
-  display: flex;
-  flex-direction: column;
-}
-
-.experience-bar {
-  display: flex;
-  align-items: center;
-}
-
-.experience-bar span {
-  font-size: 1rem;
-}
-
-.experience-bar > div {
-  flex: 1;
-  height: 4px;
-  border-radius: 4px;
-  background-color: var(--gray-line);
-  margin: 0 1.5rem;
-  position: relative;
-}
-
-.experience-bar > div > div {
-  height: 4px;
-  border-radius: 4px;
-  background-color: var(--green);
-}
-
-span.current-experience {
-  position: absolute;
-  top: 12px;
-  transform: translateX(-50%);
 }
